fix: add whitespace under players with no stats

--- a/view/frame.css
+++ b/view/frame.css
@@ -127,7 +127,7 @@
 .sub-heading {
   color: teal;
   font-size: 14px;
-  padding: 8px;
+  padding: 0 0 8px 8px;
 }
 
 .stick-left {
@@ -136,6 +136,10 @@
 }
 
 /* Profile styles */
+
+#player-profile {
+  margin: 8px 0 8px 0;
+}
 
 #player-profile-content {
   display: flex;
